<resources>
    <string name="app_name">Gist App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gist_card_save">Save</string>
    <string name="logo">Logo</string>
    <string name="splash_title">Gist App</string>
    <string name="lof_state_retry">Retry</string>
    <string name="gist_detail_owner">Owner</string>
    <string name="gist_detail_description">Description</string>
    <string name="gist_detail_files">Files</string>
    <string name="navdrawer_favorites">Favorites</string>
    <string name="navdrawer_about">About</string>
    <string name="gitlist_title">Gist List</string>
    <string name="gist_detail_title">Gist Detail</string>
    <string name="about_title">About</string>
    <string name="about_text">Android Gist App is a sample that follows the new Jetpack concepts.\n\nReach me out if you need any help:\n\nsergiocf@gmail.com</string>

    <string name="add_favorite">Gist add from Favorites</string>
    <string name="remove_favorite">Gist remove from Favorites</string>
    <string name="my_favorites">My Favorites</string>

    <string name="load_gist_error">Wooops: %s</string>
    <string name="gist_list_gist">Search by User</string>

</resources>