<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/gistListFragment">


    <fragment
        android:id="@+id/gistListFragment"
        android:name="com.sergio.gistapp.gist.list.GistListFragment"
        android:label="@string/gitlist_title"
        tools:layout="@layout/fragment_gist_list" >
        <action
            android:id="@+id/action_gistListFragment_to_gistDetailFragment"
            app:destination="@id/gistDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/gistListFragment" />
    </fragment>
    <fragment
        android:id="@+id/gistDetailFragment"
        android:name="com.sergio.gistapp.gist.detail.GistDetailFragment"
        android:label="@string/gist_detail_title"
        tools:layout="@layout/fragment_gist_detail" >
        <argument
            android:name="gist"
            app:argType="com.sergio.gistapp.gist.shared.Gist" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.sergio.gistapp.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />
</navigation>