<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="gist"
            type="com.sergio.gistapp.gist.model.Gist" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gist.detail.GistDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="116dp">

            <ImageView
                android:id="@+id/avatarImage"
                android:layout_width="@dimen/gist_detail_image_size"
                android:layout_height="@dimen/gist_detail_image_size"
                android:layout_marginStart="@dimen/gist_detail_margin"
                android:layout_marginTop="@dimen/gist_detail_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/gist_detail_description"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/ownerLabel"
                app:layout_constraintTop_toBottomOf="@+id/ownerLabel" />

            <TextView
                android:id="@+id/ownerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{gist.login}"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/ownerLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
                android:fontFamily="@font/roboto"
                tools:text="Sergiocf" />

            <TextView
                android:id="@+id/ownerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/gist_detail_owner"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/avatarImage"
                app:layout_constraintTop_toTopOf="@+id/avatarImage" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@{gist.description}"
                android:fontFamily="@font/roboto"
                app:layout_constraintBaseline_toBaselineOf="@+id/descriptionLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toEndOf="@+id/descriptionLabel"
                tools:text="The best Ever" />

            <TextView
                android:id="@+id/filesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/gist_detail_files"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarImage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fileList"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_marginStart="@dimen/gist_detail_file_list_margin"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="@dimen/gist_detail_file_list_margin"
                android:layout_marginBottom="@dimen/gist_detail_file_list_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filesLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>